# 4050FinalProject

./: .gitignore  API.md  Makefile  docker-compose.yml  mongo-init.js  pyproject.toml  seed.py
backend/: Dockerfile  pyproject.toml
backend/app/: database.py  main.py
backend/app/models/: post.py  user.py
backend/app/routes/: closet.py  posts.py  users.py
backend/app/utils/: auth.py  validators.py
backend/src/: User.py
backend/tests/: README.md  conftest.py  test_closet.py  test_follow.py  test_posts.py  test_users_login.py  test_users_profile.py  test_users_search.py  test_users_signup.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  LoginPage.jsx  RegisterPage.jsx  config.js  index.css  main.jsx
frontend/src/components/: CreatePostModal.jsx  HashTag.jsx  HashTagInput.jsx  ImageUploader.jsx  LikeButton.jsx  LinkTag.jsx  LinkTagInput.jsx  MenuPopup.jsx  NavBar.jsx  PostView.jsx  ProtectedRoute.jsx  SaveButton.jsx  Tag.jsx  TagInput.jsx  UpdateProfileModal.jsx
frontend/src/hooks/: authContext.jsx  useDidUpdateEffect.jsx
frontend/src/pages/: ClosetPage.jsx  ExplorePage.jsx  HomePage.jsx  LoginPage.jsx  MePage.jsx  ProfilePage.jsx  RegisterPage.jsx
frontend/src/styles/: CreatePostModal.css  ExplorePage.css  HashTagInput.css  HomePage.css  ImageUploader.css  LinkTag.css  LinkTagInput.css  MenuPopup.css  NavBar.css  PostView.css  RegisterPage.css
