[project]
name = "4050finalproject"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "motor>=3.7.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.13.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.26",
    "ruff>=0.15.10",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "httpx",
]
